--- a/src/qt/forms/sendcoinsdialog.ui
+++ b/src/qt/forms/sendcoinsdialog.ui
@@ -889,7 +889,7 @@
                  <item>
                   <widget class="QRadioButton" name="radioCustomPerKilobyte">
                    <property name="toolTip">
-                    <string>If the custom fee is set to 1000 uXAVANDERs and the transaction is only 250 bytes, then &quot;per kilobyte&quot; only pays 250 uXAVANDERs in fee,&lt;br /&gt;while &quot;at least&quot; pays 1000 uXAVANDERs. For transactions bigger than a kilobyte both pay by kilobyte.</string>
+                    <string>If the custom fee is set to 1000 uXCZMs and the transaction is only 250 bytes, then &quot;per kilobyte&quot; only pays 250 uXCZMs in fee,&lt;br /&gt;while &quot;at least&quot; pays 1000 uXCZMs. For transactions bigger than a kilobyte both pay by kilobyte.</string>
                    </property>
                    <property name="text">
                     <string>per kilobyte</string>
@@ -905,7 +905,7 @@
                  <item>
                   <widget class="QRadioButton" name="radioCustomAtLeast">
                    <property name="toolTip">
-                    <string>If the custom fee is set to 1000 uXAVANDERs and the transaction is only 250 bytes, then &quot;per kilobyte&quot; only pays 250 uXAVANDERs in fee,&lt;br /&gt;while &quot;total at least&quot; pays 1000 uXAVANDERs. For transactions bigger than a kilobyte both pay by kilobyte.</string>
+                    <string>If the custom fee is set to 1000 uXCZMs and the transaction is only 250 bytes, then &quot;per kilobyte&quot; only pays 250 uXCZMs in fee,&lt;br /&gt;while &quot;total at least&quot; pays 1000 uXCZMs. For transactions bigger than a kilobyte both pay by kilobyte.</string>
                    </property>
                    <property name="text">
                     <string>total at least</string>
